# renderers-svg

./: .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE.txt  README.rst  pyproject.toml  setup.cfg  setup.py
nagare/: __init__.py
nagare/renderers/: __init__.py  svg.py
src/nagare/: __init__.py
src/nagare/renderers/: __init__.py  svg.py
tests/: test_svg.py
